--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Odin Recipes</title>
 </head>
+
 <body>
   <h1>Odin Recipes</h1>
-  <a href="lasagna.html">Link to Lasagna</a>
+  <a href="recipes/lasagna.html" target="_blank" rel="noopener no referrer">Lasagna</a>
 </body>
+
 </html>
