feat(recipes): add coconutChutney.html update lasagna.html and index.html
- add recipes/coconutChutney.html page
- update index.html to link recipes/coconutChutney.html
- add ingredients and steps to recipes/lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,21 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lasagna</title>
 </head>
-
 <body>
   <h1>Lasagna</h1>
   <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="A cheesy lasagna fresh out of the oven">
   <h2>Description</h2>
   <p>Prepare the meat sauce, cook the noodles, mix the ricotta, layer the lasagna per instructions, cover with foil, bake, and allow to rest.</p>
   <p>Excellent dish served alongside grilled zucchini or garlic knots.</p>
-
   <h2>Ingredients</h2>
-
+  <ul>
+    <li>Sweet Italian sausage</li>
+    <li>Lean ground beef</li>
+    <li>1 onion</li>
+    <li>2 cloves of garlic</li>
+    <li>1 can of crushed tomatoes</li>
+    <li>2 cans of tomato sauce</li>
+    <li>2 cans of tomato paste</li>
+    <li>2 tablespoons of white sugar</li>
+    <li>Fresh parsley</li>
+    <li>Dried basil leaves</li>
+    <li>Salt</li>
+    <li>Italian seasoning</li>
+    <li>Fennel seeds</li>
+    <li>Black pepper</li>
+    <li>lasagna noodles</li>
+    <li>Parmesan cheese</li>
+    <li>Mozzarella cheese</li>
+    <li>Ricotta cheese</li>
+    <li>1 egg</li>
+</ul>
+  <h2>Steps</h2>
+  <ol>
+      <li>Brown Meat and Prepare Sauce:
+        In a Dutch oven, brown sausage, ground beef, onion, and garlic. Stir in crushed tomatoes, tomato sauce, tomato paste, water, sugar, parsley, basil, salt, Italian seasoning, fennel seeds, and pepper. Simmer covered for 1 1/2 hours, stirring occasionally.
+      </li>
+      <li>Cook Lasagna Noodles:
+        Boil noodles for 8-10 minutes; drain and rinse with cold water.
+      </li>
+      <li>Prepare Ricotta Mixture:
+        In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.
+      </li>
+      <li>Preheat the Oven:
+        Preheat to 375°F (190°C).
+      </li>
+      <li>Assemble Layers:
+        Spread 1 1/2 cups of meat sauce in a 9x13-inch baking dish. Arrange 6 noodles lengthwise over the meat sauce. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 1/2 cups of meat sauce over mozzarella and sprinkle with 1/4 cup Parmesan cheese.
+      </li>
+      <li>Repeat Layers:
+        Continue layering and top with remaining mozzarella and Parmesan cheese.
+      </li>
+      <li>
+        Cover and Bake:
+        Cover with foil and bake for 25 minutes.
+      </li>
+      <li>Uncover and Bake:
+        Remove the foil and bake for an additional 25 minutes.
+      </li>
+      <li>Rest:
+        Allow the lasagna to rest for 15 minutes before serving.
+      </li>
+  </ol>
 </body>
-
 </html>
