--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lasagna.html" target="_blank" rel="noopener no referrer">Lasagna</a>
+  <ul>
+    <li><a href="recipes/lasagna.html" target="_blank" rel="noopener no referrer">Lasagna<a>
+    </li>
+    <li>
+      <a href="recipes/coconutChutney.html" target="_blank" rel="noopener no referrer">Coconut Chutney<a>
+    </li>
+  </ul>
 </body>
 
 </html>
