feat(recipes): update index.html and coconutChutney.html, add rasgulla.html page
- link rasgulla.html to index.html
- add ingredients and steps to rasgulla.html and coconutChutney.html
- add images to coconutChutney.html and rasgulla.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li>
       <a href="recipes/coconutChutney.html" target="_blank" rel="noopener no referrer">Coconut Chutney<a>
     </li>
+    <li><a href="recipes/rasgulla.html" target="_blank" rel="noopener no referrer">Rasgulla</a>
   </ul>
 </body>
 
